<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.codepath.testingdemo.activities.EspressoDemoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etSearch"
            android:hint="@string/enter_text_hint"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSubmitClicked"
            android:text="@string/submit"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvSearchText"
        android:hint="@string/last_search"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/btnDisplayCurrentUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onDisplayCurrentUserClicked"
        android:text="Display Current User"/>

    <TextView
        android:id="@+id/tvCurrentUser"
        android:text="No logged in user"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
